--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
+  "name": "assignment2",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "mocha --exit"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1325.0",
     "bcrypt": "^5.1.0",
     "chai": "^4.3.7",
     "config": "^3.3.9",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "formidable": "^2.1.2",
+    "fs": "^0.0.1-security",
     "mocha": "^10.2.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "path": "^0.12.7",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
