--- a/package.json
+++ b/package.json
@@ -17,16 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
-    "formidable": "^2.1.2",
-    "fs": "^0.0.1-security",
     "mocha": "^10.2.0",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
-    "path": "^0.12.7",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "uuid": "^9.0.0"
   }
 }
