--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
+    "statsd-client": "^0.4.7",
     "supertest": "^6.3.3",
     "uuid": "^9.0.0"
   }
